--- a/Projects.html
+++ b/Projects.html
@@ -44,7 +44,7 @@
 		<!-- ace styles -->
 
 	<link rel="stylesheet" type="text/css" href="./Projects_files/ace-fonts.css"><link rel="stylesheet" type="text/css" href="./Projects_files/ace.min.css"><!--[if lte IE 9]><link rel="stylesheet" type="text/css" href="/css/ace-part2.min.css" /><![endif]--><link rel="stylesheet" type="text/css" href="./Projects_files/ace-skins.min.css"><link rel="stylesheet" type="text/css" href="./Projects_files/ace-rtl.min.css"><!--[if lte IE 9]><link rel="stylesheet" type="text/css" href="/css/ace-ie.min.css" /><![endif]-->	<!--inline styles-->
-	<link rel="stylesheet" type="text/css" href="./Projects_files/practera.css"><link rel="stylesheet" type="text/css" href="./Projects_files/feedback.css"><link rel="stylesheet" type="text/css" href="./Projects_files/chat-style.css"><link rel="stylesheet" type="text/css" href="./Projects_files/style.css">
+	<link rel="stylesheet" type="text/css" href="./Projects_files/practera.css"><link rel="stylesheet" type="text/css" href="./Projects_files/feedback.css"><link rel="stylesheet" type="text/css" href="./Projects_files/chat-style.css"><link rel="stylesheet" type="text/css" href="./Projects_files/style.css"><link rel="stylesheet" type="text/css" href="./Projects_files/style_new.css">
 
  	<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 
