Change progress bar status & colors

--- a/Projects.html
+++ b/Projects.html
@@ -1188,8 +1188,8 @@
 								<div class="col col-md-10 text-left">
 									<a href="http://practera.com/project/projects/view#milestone869" data-toggle="collapse" data-parent="#admin-design">Milestone 1: Foundation</a>								</div>
 								<div class="col col-md-2 text-right">
-									<div class="meter red nostripe">
-										<span style="width: 0%;"></span>
+									<div class="meter green nostripe">
+										<span style="width: 100%;"></span>
 									</div>
 								</div>
 							</div>
@@ -1331,8 +1331,8 @@
 								<div class="col col-md-10 text-left">
 									<a href="http://practera.com/project/projects/view#milestone868" data-toggle="collapse" data-parent="#admin-design">Milestone 2: Scope</a>								</div>
 								<div class="col col-md-2 text-right">
-									<div class="meter red nostripe">
-										<span style="width: 0%;"></span>
+									<div class="meter orange nostripe">
+										<span style="width: 60%;"></span>
 									</div>
 								</div>
 							</div>
@@ -1482,7 +1482,7 @@
 									<a href="http://practera.com/project/projects/view#milestone870" data-toggle="collapse" data-parent="#admin-design">Milestone 3: Research &amp; Synthesis Findings</a>								</div>
 								<div class="col col-md-2 text-right">
 									<div class="meter red nostripe">
-										<span style="width: 0%;"></span>
+										<span style="width: 30%;"></span>
 									</div>
 								</div>
 							</div>
