Change color of Milestone bar

--- a/Projects.html
+++ b/Projects.html
@@ -1182,11 +1182,11 @@
 <div class="content-container hidden-xs">
 	<div class="panel-group" id="admin-design" role="view" data-pid="198">
 									<div class="panel panel-primary">
-					<div class="panel-heading">
+					<div class="panel-heading panel-heading-past">
 						<div class="panel-title clearfix">
 							<div class="row">
 								<div class="col col-md-10 text-left">
-									<a href="http://practera.com/project/projects/view#milestone869" data-toggle="collapse" data-parent="#admin-design">Milestone 1: Foundation</a>								</div>
+									<a href="http://practera.com/project/projects/view#milestone869" data-toggle="collapse" data-parent="#admin-design">Milestone 1: Foundation (Past)</a>								</div>
 								<div class="col col-md-2 text-right">
 									<div class="meter green nostripe">
 										<span style="width: 100%;"></span>
@@ -1325,11 +1325,11 @@
 					</div>
 				</div>
 							<div class="panel panel-primary">
-					<div class="panel-heading">
+					<div class="panel-heading panel-heading-overdue">
 						<div class="panel-title clearfix">
 							<div class="row">
 								<div class="col col-md-10 text-left">
-									<a href="http://practera.com/project/projects/view#milestone868" data-toggle="collapse" data-parent="#admin-design">Milestone 2: Scope</a>								</div>
+									<a href="http://practera.com/project/projects/view#milestone868" data-toggle="collapse" data-parent="#admin-design">Milestone 2: Scope (Overdue)</a>								</div>
 								<div class="col col-md-2 text-right">
 									<div class="meter orange nostripe">
 										<span style="width: 60%;"></span>
@@ -1475,11 +1475,11 @@
 					</div>
 				</div>
 							<div class="panel panel-primary">
-					<div class="panel-heading">
+					<div class="panel-heading panel-heading-current">
 						<div class="panel-title clearfix">
 							<div class="row">
 								<div class="col col-md-10 text-left">
-									<a href="http://practera.com/project/projects/view#milestone870" data-toggle="collapse" data-parent="#admin-design">Milestone 3: Research &amp; Synthesis Findings</a>								</div>
+									<a href="http://practera.com/project/projects/view#milestone870" data-toggle="collapse" data-parent="#admin-design">Milestone 3: Research &amp; Synthesis Findings (Current)</a>								</div>
 								<div class="col col-md-2 text-right">
 									<div class="meter red nostripe">
 										<span style="width: 30%;"></span>
@@ -1734,7 +1734,7 @@
 					</div>
 				</div>
 							<div class="panel panel-primary">
-					<div class="panel-heading">
+					<div class="panel-heading panel-heading-future">
 						<div class="panel-title clearfix">
 							<div class="row">
 								<div class="col col-md-10 text-left">
@@ -1907,7 +1907,7 @@
 					</div>
 				</div>
 							<div class="panel panel-primary">
-					<div class="panel-heading">
+					<div class="panel-heading panel-heading-future">
 						<div class="panel-title clearfix">
 							<div class="row">
 								<div class="col col-md-10 text-left">
