Change My Programs & My Team

--- a/Projects.html
+++ b/Projects.html
@@ -77,17 +77,14 @@
 			<img src="./Projects_files/practera.png" height="50px" alt="Practera">			</a>
 
 		</div>
-
+		<div class="navbar-header" style="padding-top:15px;"><span class="project-name">Intersective Business Projects</span></div>
 		<div class="navbar-buttons navbar-header pull-right navbar-collapse collapse" id="nav-header-right" role="navigation">
 			<ul class="nav ace-nav">
 			
 												<li class="practera-blue" id="programmenu">
 						<a class="dropdown-toggle" href="http://practera.com/project/projects/view#" data-toggle="dropdown">
 							<i class="menu-icon fa fa-institution"></i>&nbsp;&nbsp;&nbsp;&nbsp;
-							<span class="user-info">
-																															Intersective								<small> Business Projects</small>
-							
-							</span>
+							<span class="user-info">My Programs</span>
 							<i class="ace-icon fa fa-caret-down"></i>
 						</a>
 						<ul class="dark pull-right dropdown-navbar dropdown-menu-right dropdown-menu dropdown-caret dropdown-close">
@@ -95,6 +92,7 @@
 								<li class="dropdown-content ace-scroll" data-size="200" style="position: relative;"><div class="scroll-track" style="display: none;"><div class="scroll-bar"></div></div><div class="scroll-content" style="max-height: 200px;">
 									<ul class="dropdown-menu dropdown-navbar">
 																	<li><a href="http://practera.com/users/change/program/51"><i class="ace-icon fa fa-book"></i>  Intersective Interns 2015</a></li>
+																	<li><a href="http://practera.com/users/change/program/51"><i class="ace-icon fa fa-book"></i>  Intersective Business Projects</a></li>
 																	</ul>
 								</div></li>
 																				</ul>
@@ -102,16 +100,16 @@
 				
 														<li class="practera-blue" id="teammenu">
 						<a class="dropdown-toggle" href="http://practera.com/project/projects/view#" data-toggle="dropdown">
-							<i class="menu-icon fa fa-group"></i>&nbsp;&nbsp;&nbsp;&nbsp;														<span id="team-info" class="user-info">
-																																											Front-end									<small> development</small>
-															</span>
+							<i class="menu-icon fa fa-group"></i>&nbsp;&nbsp;&nbsp;&nbsp;														
+							<span id="team-info" class="user-info">My Team
+							</span>
 														<i class="ace-icon fa fa-caret-down"></i>
 
 						</a>
 
 
 						<ul class="user-menu pull-right dropdown-yellow dropdown-menu-right dropdown-menu dropdown-caret dropdown-close dropdown-navbar">
-							<li class="dropdown-header">Collaboration Tools</li>
+							<li class="dropdown-header">Front-end development</li>
 							<li><a href="http://practera.com/teams/view" class="dialog_button" data-dialog="edit_team"><i class="ace-icon fa fa-group"></i> Project Workspace</a>							</li>
 							<li><a href="mailto:hello@aentan.com%2C%20karam@intersective.com%2C%20natasha@intersective.com%2C%20?Subject=%5BIntersective%20Business%20Projects%5D%20Front-end%20development"><i class="ace-icon fa fa-envelope-o"></i> Message Project Team</a></li>														<li><a href="http://practera.com/dashboards/help"><i class="ace-icon fa fa-warning"></i> Report Issue</a></li>
 													</ul>
