Add Project icon

--- a/Projects.html
+++ b/Projects.html
@@ -114,12 +114,77 @@
 							<li><a href="mailto:hello@aentan.com%2C%20karam@intersective.com%2C%20natasha@intersective.com%2C%20?Subject=%5BIntersective%20Business%20Projects%5D%20Front-end%20development"><i class="ace-icon fa fa-envelope-o"></i> Message Project Team</a></li>														<li><a href="http://practera.com/dashboards/help"><i class="ace-icon fa fa-warning"></i> Report Issue</a></li>
 													</ul>
 					</li>
-									
+					<!--===================================================-->
+				<li class="practera-blue">
+					<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+						<i class="ace-icon fa fa-tasks"></i>
+						<span class="badge badge-grey">5</span>
+					</a>
+					<ul class="user-menu pull-right dropdown-yellow dropdown-menu-right dropdown-menu dropdown-caret dropdown-close dropdown-navbar">
+							<li class="dropdown-header">Milestones</li>
+							<li>
+								<a href="#" class="dialog_button" data-dialog="edit_team">
+									<div class="clearfix">
+										<span class="pull-left">Foundation</span>
+										<span class="pull-right">100%</span>
+									</div>
+									<div class="progress progress-mini">
+										<div style="width:100%" class="progress-bar progress-bar-success"></div>
+									</div>
+								</a>							
+							</li>
+							<li>
+								<a href="#" class="dialog_button" data-dialog="edit_team">
+									<div class="clearfix">
+										<span class="pull-left">Scope</span>
+										<span class="pull-right">60%</span>
+									</div>
+									<div class="progress progress-mini">
+										<div style="width:60%" class="progress-bar progress-bar-warning"></div>
+									</div>
+								</a>							
+							</li>
+							<li>
+								<a href="#" class="dialog_button" data-dialog="edit_team">
+									<div class="clearfix">
+										<span class="pull-left">Research &amp; Synthesis Findings</span>
+										<span class="pull-right">20%</span>
+									</div>
+									<div class="progress progress-mini">
+										<div style="width:20%" class="progress-bar progress-bar-danger"></div>
+									</div>
+								</a>							
+							</li>
+							<li>
+								<a href="#" class="dialog_button" data-dialog="edit_team">
+									<div class="clearfix">
+										<span class="pull-left">Execute</span>
+										<span class="pull-right">0%</span>
+									</div>
+									<div class="progress progress-mini">
+										<div style="width:0%" class="progress-bar"></div>
+									</div>
+								</a>							
+							</li>
+							<li>
+								<a href="#" class="dialog_button" data-dialog="edit_team">
+									<div class="clearfix">
+										<span class="pull-left">Present Project</span>
+										<span class="pull-right">0%</span>
+									</div>
+									<div class="progress progress-mini">
+										<div style="width:10%" class="progress-bar progress-bar-danger"></div>
+									</div>
+								</a>							
+							</li>
+					</ul>
+				</li>		
+				<!--===================================================-->			
 				<li class="practera-dark-blue" id="usermenu">
 					<a class="dropdown-toggle" href="http://practera.com/project/projects/view#" data-toggle="dropdown">
-													<img alt="Shawn Ma&#39;s Photo" src="./Projects_files/thumb" class="nav-user-photo">
+													<img src="./Projects_files/user-512.png" class="nav-user-photo">
 												<span class="user-info">
-						Shawn Ma<br> 						</span>
+						User Name<br> 						</span>
 						<i class="ace-icon fa fa-caret-down pull-right"></i>
 					</a>
 					<ul class="user-menu pull-right dropdown-navbar dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
@@ -153,7 +218,7 @@
 	<li class="hsub">
 		<a href="http://practera.com/project/projects/view#" class="dropdown-toggle">
 			<i class="menu-icon fa fa-calendar"></i>
-			<span class="menu-text">Schedule</span>
+			<span class="menu-text">My Schedule</span>
 			<b class="arrow fa fa-angle-down"></b>
 	  	</a>
 		<ul class="submenu">
@@ -164,7 +229,7 @@
 			</li>
 			<li>
 				<a href="http://practera.com/story/comms">
-					<i class="menu-icon fa fa-caret-right"></i> Communications				</a>
+					<i class="menu-icon fa fa-caret-right"></i> News				</a>
 				<b class="arrow"></b>
 			</li>
 		</ul>
@@ -173,7 +238,7 @@
 	<li class="hsub active">
 		<a href="http://practera.com/project/projects/view#" class="dropdown-toggle">
 			<i class="menu-icon fa fa-road"></i>
-			<span class="menu-text">Project</span>
+			<span class="menu-text">My Project</span>
 			<b class="arrow fa fa-angle-down"></b>
 		</a>
 		<ul class="submenu">
@@ -197,7 +262,7 @@
 	<li class="hsub">
 		<a href="http://practera.com/project/projects/view#" class="dropdown-toggle">
 			<i class="menu-icon fa fa-group"></i>
-			<span class="menu-text">Collaborate</span>
+			<span class="menu-text">My Team</span>
 			<b class="arrow fa fa-angle-down"></b>
 		</a>
 		<ul class="submenu">
