--- a/Projects.html
+++ b/Projects.html
@@ -114,7 +114,7 @@
 							<li><a href="mailto:hello@aentan.com%2C%20karam@intersective.com%2C%20natasha@intersective.com%2C%20?Subject=%5BIntersective%20Business%20Projects%5D%20Front-end%20development"><i class="ace-icon fa fa-envelope-o"></i> Message Project Team</a></li>														<li><a href="http://practera.com/dashboards/help"><i class="ace-icon fa fa-warning"></i> Report Issue</a></li>
 													</ul>
 					</li>
-					<!--===================================================-->
+				<!--===================================================-->
 				<li class="practera-blue">
 					<a data-toggle="dropdown" class="dropdown-toggle" href="#">
 						<i class="ace-icon fa fa-tasks"></i>
@@ -179,6 +179,36 @@
 							</li>
 					</ul>
 				</li>		
+				<li class="practera-blue">
+					<a data-toggle="dropdown" class="dropdown-toggle" href="#">
+						<i class="ace-icon fa fa-bell icon-animated-bell"></i>
+						<span class="badge badge-grey">3</span>
+					</a>
+					<ul class="user-menu pull-right dropdown-yellow dropdown-menu-right dropdown-menu dropdown-caret dropdown-close dropdown-navbar">
+							<li class="dropdown-header">
+								<i class="ace-icon fa fa-exclamation-triangle"></i>Notifications
+							</li>
+							<li>
+								<a href="#" class="dialog_button" data-dialog="edit_team">
+									<div class="clearfix">
+										<span class="pull-left">
+											<i class="btn btn-xs no-hover btn-pink fa fa-comment"></i>&nbsp;New Comments</span>
+										<span class="pull-right badge badge-info">+3</span>
+									</div>
+								</a>							
+							</li>
+							<li>
+								<a href="#" class="dialog_button" data-dialog="edit_team">
+									<div class="clearfix">
+										<span class="pull-left">
+											<i class="btn btn-xs no-hover btn-primary fa fa-file-o"></i>&nbsp;New Posts</span>
+										<span class="pull-right badge badge-info">+2</span>
+									</div>
+								</a>							
+							</li>
+							
+					</ul>
+				</li>	
 				<!--===================================================-->			
 				<li class="practera-dark-blue" id="usermenu">
 					<a class="dropdown-toggle" href="http://practera.com/project/projects/view#" data-toggle="dropdown">
