Change Progress bar of milestones in menu

--- a/Projects.html
+++ b/Projects.html
@@ -128,7 +128,7 @@
 										<span class="pull-left">Foundation</span>
 										<span class="pull-right">100%</span>
 									</div>
-									<div class="progress progress-mini">
+									<div class="progress progress-mini progress-striped active">
 										<div style="width:100%" class="progress-bar progress-bar-success"></div>
 									</div>
 								</a>							
@@ -139,7 +139,7 @@
 										<span class="pull-left">Scope</span>
 										<span class="pull-right">60%</span>
 									</div>
-									<div class="progress progress-mini">
+									<div class="progress progress-mini progress-striped active">
 										<div style="width:60%" class="progress-bar progress-bar-warning"></div>
 									</div>
 								</a>							
@@ -150,7 +150,7 @@
 										<span class="pull-left">Research &amp; Synthesis Findings</span>
 										<span class="pull-right">20%</span>
 									</div>
-									<div class="progress progress-mini">
+									<div class="progress progress-mini progress-striped active">
 										<div style="width:20%" class="progress-bar progress-bar-danger"></div>
 									</div>
 								</a>							
@@ -161,7 +161,7 @@
 										<span class="pull-left">Execute</span>
 										<span class="pull-right">0%</span>
 									</div>
-									<div class="progress progress-mini">
+									<div class="progress progress-mini progress-striped active">
 										<div style="width:0%" class="progress-bar"></div>
 									</div>
 								</a>							
@@ -172,7 +172,7 @@
 										<span class="pull-left">Present Project</span>
 										<span class="pull-right">0%</span>
 									</div>
-									<div class="progress progress-mini">
+									<div class="progress progress-mini progress-striped active">
 										<div style="width:10%" class="progress-bar progress-bar-danger"></div>
 									</div>
 								</a>							
